--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,19 +2,20 @@
 name = "tdd project"
 version = "0.0.1"
 description = ""
-authors = ["Rafael Venancio <rafael.venancio08.06@gmail.com>"]
+authors = ["Nayanna Nara <nayanna501@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-fastapi = "^0.111.0"
-uvicorn = "^0.30.1"
-pydantic = "^2.7.4"
-pydantic-settings = "^2.3.3"
-motor = "^3.4.0"
-pytest = "^8.2.2"
-pytest-asyncio = "^0.23.7"
-pre-commit = "^3.7.1"
+fastapi = "^0.104.1"
+uvicorn = "^0.24.0.post1"
+pydantic = "^2.5.1"
+pydantic-settings = "^2.1.0"
+motor = "^3.3.1"
+pytest = "^7.4.3"
+pytest-asyncio = "^0.21.1"
+pre-commit = "^3.5.0"
+httpx = "^0.25.1"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
